--- a/gradle.properties
+++ b/gradle.properties
@@ -11,10 +11,12 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-JAVA_VERSION=1.7
-AGP_VERSION=3.4.2
+JAVA_VERSION=1.8
+AGP_VERSION=3.6.0
+
 GROUP_ID=com.iqiyi.android.qigsaw
 VERSION_NAME=1.3.3
+
 BINTRAY_REPO=maven
 POM_DESCRIPTION=A dynamic modularization library which is based on Android App Bundles.
 POM_PACKAGING=pom
@@ -31,5 +33,7 @@ POM_DEVELOPER_EMAIL=kisson_cjw@hotmail.com
 BINTRAY_LICENCE='MIT'
 BINTRAY_ORGANIZATION=qigsaw
 POM_ISSUE_URL='https://github.com/iqiyi/Qigsaw/issues'
+
 android.useAndroidX=true
 android.enableJetifier=true
+android.enableR8=true
