--- a/qigsaw-android-sample/build.gradle
+++ b/qigsaw-android-sample/build.gradle
@@ -1,6 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
-
 buildscript {
 
     repositories {
@@ -10,9 +7,7 @@ buildscript {
 
     dependencies {
         classpath "com.android.tools.build:gradle:${AGP_VERSION}"
-        classpath "com.iqiyi.android.qigsaw:gradle-plugin:${VERSION_NAME}"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+//        classpath "com.iqiyi.android.qigsaw:gradle-plugin:${VERSION_NAME}"
     }
 }
 
@@ -31,6 +26,7 @@ ext {
             'targetSdk' : 28,
             'support'   : '27.1.1'
     ]
+
     sample = true
 }
 
