--- a/features/native/src/main/AndroidManifest.xml
+++ b/features/native/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.iqiyi.qigsaw.sample.ccode">
 
     <dist:module
@@ -9,12 +10,16 @@
         <dist:fusing dist:include="true" />
     </dist:module>
 
-    <application>
+    <application
+        android:allowBackup="false"
+        tools:ignore="AllowBackup">
+
         <activity android:name=".NativeSampleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
