--- a/features/assets/src/main/AndroidManifest.xml
+++ b/features/assets/src/main/AndroidManifest.xml
@@ -1,22 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright 2018 Google LLC.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
-<!-- This feature module only contains a single assets file relevant to the Android app. -->
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.iqiyi.qigsaw.sample.assets">
 
     <dist:module
@@ -25,5 +10,9 @@
         <dist:fusing dist:include="true" />
     </dist:module>
 
-    <application android:hasCode="false"></application>
+    <application
+        android:allowBackup="false"
+        android:hasCode="false"
+        tools:ignore="AllowBackup" />
+
 </manifest>
