--- a/features/java/src/main/AndroidManifest.xml
+++ b/features/java/src/main/AndroidManifest.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.iqiyi.qigsaw.sample.java">
 
-    <application
-        android:name=".JavaSampleApplication"
-        tools:ignore="GoogleAppIndexingWarning">
+    <dist:module
+        dist:onDemand="false"
+        dist:title="@string/module_java">
+        <dist:fusing dist:include="true" />
+    </dist:module>
+
+    <application android:name=".JavaSampleApplication">
 
         <activity
             android:name=".JavaSampleActivity"
@@ -19,11 +22,5 @@
             android:exported="false" />
 
     </application>
-
-    <dist:module
-        dist:onDemand="false"
-        dist:title="@string/module_java">
-        <dist:fusing dist:include="true" />
-    </dist:module>
 
 </manifest>
